<resources>
    <string name="app_name">Tech News</string>
    <string name="home">home</string>
    <string name="save">save</string>
    <string name="profile">profile</string>
    <string name="galal_ahmed">Galal Ahmed</string>
    <string name="email">ga71387@gmail.com</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="short_description">From AI breakthroughs to sustainable innovation, the tech world is evolving at a rapid pace. Explore how different regions across the globe are driving change in the digital era</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">back</string>
    <string name="share">Share</string>
    <string name="description">In a world increasingly defined by innovation, technology has become the single most powerful driver of global transformation. From artificial intelligence to quantum computing, tech is not only reshaping industries but also redefining how we live, work, and connect. One of the most significant trends is the acceleration of AI integration across sectors. From healthcare diagnostics to financial forecasting, machine learning algorithms are streamlining decision-making processes and opening up new possibilities. Meanwhile, the rise of generative AI tools is reshaping content creation, code development, and even product design.</string>
    <string name="_3_days_ago">3 days ago</string>
    <string name="author">Author</string>
    <string name="article_deleted_successfully">Article deleted successfully.</string>
    <string name="article_saved_successfully">Article saved successfully.</string>
</resources>