<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColorScreen"
    tools:context=".presentation.Profile.ProfileFragment">

    <!--Header-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:id="@+id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/avatar_image"
            android:src="@drawable/back_icon"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/splashBackground"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintBottom_toBottomOf="@id/avatar_image"
            app:layout_constraintStart_toEndOf="@id/avatar_image"
            app:layout_constraintTop_toTopOf="@id/avatar_image" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--User Data-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/user_image"
            android:src="@drawable/profile_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_name"
            android:text="@string/galal_ahmed"
            app:layout_constraintStart_toStartOf="@id/user_image"
            app:layout_constraintEnd_toEndOf="@id/user_image"
            app:layout_constraintTop_toBottomOf="@id/user_image"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_regular"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            app:layout_constraintStart_toStartOf="@id/user_name"
            app:layout_constraintEnd_toEndOf="@id/user_name"
            app:layout_constraintTop_toBottomOf="@id/user_name"
            android:text="@string/email"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Setting-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings"
        app:layout_constraintStart_toStartOf="@id/user_data"
        app:layout_constraintEnd_toEndOf="@id/user_data"
        app:layout_constraintTop_toBottomOf="@id/user_data"
        android:layout_marginTop="40dp"
        >

        <!--Profile-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_tap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            >
            
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/profile_active"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_regular"
                />
            
            
        </LinearLayout>

        <!--Notifications-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notification_tap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_tap"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/notifications"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_regular"
                />


        </LinearLayout>

        <!--Language-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/language_tap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notification_tap"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/language"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_regular"
                />


        </LinearLayout>

        <!--Settings-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_tap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/language_tap"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/settings"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_regular"
                />
        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logout_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/backgroundColorScreen"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        app:cornerRadius="20dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/colorIconSelection"
        />


</androidx.constraintlayout.widget.ConstraintLayout>